[package]
name = "na_plugin_libp2p"
version = "0.1.0"
edition = "2021"

[lib]
name = "na_plugin_libp2p"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"

[dependencies]
libp2p = { path = "../rust-libp2p/libp2p", features = ["tokio", "tcp", "noise", "yamux"] }
libp2p-stream = { path = "../rust-libp2p/protocols/stream" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "time", "io-util"] }
futures = "0.3"
parking_lot = "0.12"
nix = { version = "0.29", features = ["event", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
